add_library(ArrayBasics 
    VarLen32.cpp
    Array.cpp
    ArrayElementHandling.cpp
    ArrayMetadataHandling.cpp
    ArrayNullHandling.cpp
    ArrayGetter.cpp
    ArrayParsing.cpp
    ArrayAppend.cpp
    ArraySlice.cpp
    ArraySubscript.cpp
    ArrayArithmetic.cpp
    ArrayActivation.cpp
    ArrayTranspose.cpp
    ArrayFill.cpp
    ArrayPrint.cpp
    ArrayEmpty.cpp
    ArrayRuntime.cpp
)