add_library(ArrayBasics 
    VarLen32.cpp
    Array.cpp
    ArrayElementHandling.cpp
    ArrayWidthHandling.cpp
    ArrayNullHandling.cpp
    ArrayParsing.cpp
    ArrayAppend.cpp
    ArraySlice.cpp
    ArraySubscript.cpp
    ArrayArithmetic.cpp
    ArrayActivation.cpp
    ArrayTranspose.cpp
    ArrayFill.cpp
    ArrayCast.cpp
    ArrayPrint.cpp
    ArrayRuntime.cpp
)